Revert "Issue 30"
