# src/models/user.js
@@ -62,15 +62,6 @@ class User extends ModelComponent{
         }
     }
 
-    
-    async finalizeWithdraw(){
-        try{
-            return await this.process('FinalizeWithdraw');
-        }catch(err){
-            throw err;
-        }
-    }
-
 }
 
 export default User;
